# discord-shill-bot

./: .gitignore  Cargo.toml  Dockerfile  task-def.json
.github/workflows/: aws.yml
src/: commands.rs  db_manager.rs  framework.rs  main.rs  message_parser.rs  shill_structs.rs
src/message_parser/: mod.rs  youtube_parser.rs
