[package]
name = "discord-shill-bot"
version = "0.1.0"
authors = ["Blake Hildebrand <baugusthildebrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
log = "0.4.11"
typemap = "0.3.3"
log4rs = "0.13.0"